# deckard

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CudaDockerfile  Dockerfile  README.md  __init__.py  build_instructions.md  data.py  deckard.code-workspace  deckard.py  deckard.spec  defend.py  dvc.yaml  evaluate.py  example.ipynb  featurize.py  hardcopy.0  hardcopy.1  ml-afr.workspace.code-workspace  mnist_gan.py  mnist_resnet.py  params.yaml  prepare.py  preprocess.py  pyproject.toml  retrain.py  rpi.sh  setup.py  setup.sh  train.py  train_random_forest_mnist.py  visualize.ipynb
.github/workflows/: black.yml  build_macos.yml  build_ubuntu.yml  build_windows.yml  compile-docs.yml  deckard-test.yml  docker-image.yml  docker-publish.yml  docker-push.yml  docker-test.yml  docker.yml  npm-publish-github-packages.yml  python-package.yml  shiftleft.yml
.ipynb_checkpoints/: rinex2pandas-checkpoint.ipynb
IaaC/ansible_files/: ansible.cfg  initialize_master.yaml  inventory.ini  site.yaml
IaaC/gcp/: README.md  cleanup.sh  config.yaml  inventory.ini  main.sh  main.tf  setup_infrastructure.sh  variables.tf
base/: __init__.py  data.py  database.py  experiment.py  model.py  read_yml.py  utils.py
configs/: featurize.yml  model.yml  prepare.yml
data/best_train/: cv_results.json  results.json
deckard/: README.md  __init__.py  __main__.py  attack.py  compile.py  data.py  defend.py  experiment.py  file.py  impute.py  model.py  optuna_callback.py  score.py  utils.py
deckard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
deckard/attack/: __init__.py
deckard/base/: __init__.py  attack.py  cleaner.py  crawler.py  data.py  database.py  experiment.py  generator.py  hashable.py  model.py  new_generator.py  params.yaml  parse.py  prepare.py  prototype.yaml  read_yml.py  scorer.py  storage.py  template.html  test_data.py  test_experiment.py  test_model.py  test_parse.py  test_utils.py  utils.py  visualise.py  watcher.py
deckard/configs/: attack.yml  model.yml  preprocess.yml
deckard/data/: __init__.py  cross_validate.py  data.py  fairness.py  pytorch.py
deckard/deckard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
deckard/docs/: README.md
deckard/iaac/: __init__.py
deckard/layers/: README.md  __init__.py  __main__.py  afr.py  aft.py  art_model.py  attack.py  clean_data.py  compile.py  compile_results.py  data.py  defend.py  deploy.py  evaluate.py  evaluate_old.py  experiment.py  factory.py  featurize.py  find_best.py  generate_attacks.py  generate_grid.py  generate_models.py  generate_webpage.py  hydra_test.py  merge.py  mnist_gan.py  mnist_resnet.py  model.py  old_afr.py  optimise.py  optimise_redo.py  optimize.py  parse.py  pipeline_generator.py  plots.ipynb  plots.py  prepare.py  prepare_queue.py  preprocess.py  prometheus.py  (+12 more)
deckard/model/: __init__.py  base.py  defend.py  fairness.py  pytorch.py
deckard/plot/: __init__.py  seaborn_plots.py  yellowbrick_plots.py
docs/: .gitignore  README.md
docs/source/: attack.rst  conf.py  data.rst  index.rst  model.rst  modules.rst  score.rst  utils.rst
examples/: .gitignore  change_ext.sh  dvc.yaml
examples/.dvc/: config
examples/bit_depth/: dvc.yaml  torch_example.py
examples/car data/: .gitignore  dvc.yaml  params.yaml
examples/cifar/: dvc.yaml
examples/cifar10/: dvc.yaml  params.yaml
examples/classification/: .gitignore  README.md  attacks.sh  dag.md  dvc.yaml  experiments.sh  grid.py  models.sh  params.yaml  plots.ipynb  plots.py  retrain.py
examples/config/: default.yaml  membership_inference.yaml
examples/gps_noise/: dvc.yaml  params.yaml
examples/gzip/: .gitignore  batchMixin.py  check_matrices.py  classifier.ipynb  classifier_refactor.py  data_prep.py  database.py  dvc.yaml  find_best.py  gram_classifier.py  gzip.code-workspace  gzip_classifier.py  merge.py  metric_space_check.py  objective.py  optuna_database.py  params.yaml  plots.py  privacy_metric.py  progress_bar.py  requirements.txt
examples/iris/: .gitignore  dag.md  dvc.yaml  generator.py  params.yaml  parse.py
examples/kdd-nsl/: .gitignore  attacks.sh  dvc.yaml  params.yaml  retrain.py
examples/keras/: dvc.yaml  keras_example.py  params.yaml
examples/mnist/: .gitignore  deckard.code-workspace  dvc.yaml  params.yaml
examples/power/: .bashrc  .gitignore  README.md  attacks.sh  dvc.yaml  mnist  models.sh  params.yaml  redis.sh  torch_example.py
examples/pytorch/: .deckard_rc  .gitignore  README.md  afr.py  attacks.sh  cifar100.yaml  dag.md  dvc.yaml  main.sh  model.py  models.sh  params.yaml  plots.ipynb  plots.py  torch_example.py  tuned.ipynb  wait.sh  weibull.ipynb
examples/pytorch_cifar/: .gitignore  afr.py  attacks.sh  dvc.yaml  models.sh  params.yaml  plots.py
examples/pytorch_cifar_100/: .gitignore  dvc.yaml  models.sh  params.yaml  torch_example.py
examples/regression/: dvc.yaml  params.yaml
examples/scratch/: compute_attack_success.py  deckard_queue.py  dvc.yaml  objective.py  params.yaml
examples/sklearn/: .deckard_rc  .gitignore  README.md  RQ.sh  attacks.sh  defense_search.py  dvc.yaml  layer_pipeline.yaml  models.sh  params.yaml  pareto.ipynb
examples/smile_detector/: .gitignore
examples/tfv1/: dvc.yaml  tfv1_example.py
examples/tfv2/: attacks.sh  dvc.yaml  install.sh  models.sh  params.yaml  tfv2_example.py
examples/thesis/: thesis_figures.py
examples/tikho/: README.md  backup.yml  cache.py  (+19 more)
layers/: attack.py  data.py  defend.py  evaluate.py  experiment.py  featurize.py  prepare.py  preprocess.py  read_yml.py  retrain.py  train.py  utils.py
test/: __init__.py  test_attack.py  test_compile.py  test_data.py  test_defend.py  test_experiment.py  test_file.py  test_impute.py  test_main.py  test_model.py  test_score.py  test_utils.py
(+4619 files in other folders)
