[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deckard"
dependencies = [
    "numpy",
    "scikit-learn",
    "tqdm",
    "pandas",
    "pytest",
    "omegaconf",
    "hydra-core",
    "hydra-optuna-sweeper",
    "hydra-joblib-launcher",
    "sqlalchemy<=1.4.46",
    "dvc",
    "lifelines",
    "seaborn",
    "jinja2",
    "paretoset",
    "omegaconf>=2.4.0.dev3",
    "adversarial-robustness-toolbox",
    "validators",
]
requires-python = ">=3.8"
version = "0.80"
authors = [{name = "simplymathematics", email = "gk82psk06@mozmail.com"},]
maintainers = [{name = "simplymathematics", email = "gk82psk06@mozmail.com"},]
description = "A tool for massive machine learning robustness evaluations."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}

keywords = ["machine learning","artificial intelligence","adversarial machine learning"]

classifiers=[
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "Intended Audience :: Education",
        "Intended Audience :: Science/Research",
        "License ::  GPL License",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
    ]
[project.scripts]
deckard = "deckard.__main__:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "torch",
    "torchvision",
    "tensorflow",
    "pre-commit",
    "codecov",
    "pytest",
    "pytest-flake8",
    "pytest-mock",
    "pytest-cov",
]
docs = [
    "sphinx >= 1.4",
    "sphinx_rtd_theme",
    "sphinx-autodoc-annotation",
    "sphinx-autodoc-typehints",
    "matplotlib",
    "numpy",
    "scipy>=1.4.1",
    "six>=1.13.0",
    "scikit-learn",
    "Pillow>=6.0.0",
]

catboost = [
    "catboost",
]

gpy = [
    "GPy",
]

keras = [
    "keras",
    "h5py",
]

tensorflow =  ["tensorflow", "tensorflow_addons", "h5py"]

tensorflow_image =  [
    "tensorflow",
    "tensorflow_addons",
    "h5py",
    "Pillow",
    "ffmpeg-python",
    "opencv-python",
]
tensorflow_audio= [
    "tensorflow",
    "tensorflow_addons",
    "h5py",
    "pydub",
    "resampy",
    "librosa",
]
pytorch= ["torch", "torchvision"]
pytorch_image= [
    "torch",
    "torchvision",
    "kornia",
    "Pillow",
    "ffmpeg-python",
    "opencv-python",
]
pytorch_audio= [
    "torch",
    "torchvision",
    "torchaudio",
    "pydub",
    "resampy",
    "librosa",
]
xgboost= ["xgboost"]
lingvo_asr= [
    "tensorflow-gpu==2.1.0",
    "lingvo==0.6.4",
    "pydub",
    "resampy",
    "librosa",
]
all= [
    "mxnet",
    "catboost",
    "lightgbm",
    "tensorflow",
    "tensorflow-addons",
    "h5py",
    "torch",
    "torchvision",
    "xgboost",
    "pandas",
    "kornia",
    "matplotlib",
    "Pillow",
    "statsmodels",
    "pydub",
    "resampy",
    "ffmpeg-python",
    "cma",
    "librosa",
    "opencv-python",
    "tensorflow",
    "dvc-gdrive",
]
non_framework= [
    "matplotlib",
    "statsmodels",
    "cma",
    "requests",
    "sortedcontainers",
]


[project.urls]
Homepage = "github.com/simplymathematics/deckard"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/github.com/simplymathematics/deckard.git"
Issues = "https://github.com/github.com/simplymathematics/deckard/issues"
Changelog = "https://github.com/github.com/simplymathematics/deckard/blob/master/CHANGELOG.md"
