[project]
name = "deckard"
version = "0.95.0"
description = "A tool for declarative AI experimentation, evaluation, and verification."
authors = [
    { name = "simplymathematics" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pandas",
    "scikit-learn",
    "hydra-core",
    "numpy",
    "adversarial-robustness-toolbox",
    "seaborn",
    "matplotlib",
    "dvc",
    "optuna",
    "ipykernel",
    "kagglehub"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["deckard"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "myst-parser",
    "nbsphinx"
]

test = [
    "pytest",
    "pytest-cov",
    "flake8",
    "black",
    "isort",
    "mypy",
    "pre-commit",
    "pandas",
    "numpy"
]

torch = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0"
]

# Linting
lint = [
    "flake8",
    "black",
    "isort",
    "mypy",
    "pre-commit"
]


# All extras
all  = [
    "pandas",
    "scikit-learn",
    "hydra-core",
    "numpy",
    "adversarial-robustness-toolbox",
    "seaborn",
    "matplotlib",
    "dvc",
    "optuna",
    "ipykernel",
    "kagglehub",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "myst-parser",
    "nbsphinx",
    "pytest",
    "pytest-cov",
    "flake8",
    "black",
    "isort",
    "mypy",
    "pre-commit",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0"
]

[tool.black]
line-length = 88
target-version = ['py310']
include = 'deckard/.*\.py'

[project.scripts]
deckard = "deckard.__main__:main"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::UserWarning",
        "ignore::RuntimeWarning",
        "ignore::sklearn.exceptions.ConvergenceWarning",
]
